@@ -1,5 +1,6 @@
-* Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.2
-- Maintenance update for module assets
+* Thu Jun 17 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.4.0
+- Removed support for Puppet 5
+- Ensured support for Puppet 7 in requirements and stdlib
 
 * Thu Jul 23 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.3.1-0
 - update the upper bound of simplib for SIMP 6.5 release
